<resources>
    <string name="app_name">Rice Mart</string>
    <string name="Username">Username</string>
    <string name="Email">Email or Mobile</string>
    <string name="Password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shopbycategory">ShopByCategory</string>
    <string name="best_deals">Best Deals</string>
    <string name="products">All Products</string>
    <string name="order_history">Order History</string>
    <string name="buy_again">Buy Again</string>
    <string name="sell_here">Sell Here</string>
    <string name="your_account">Your Account</string>
    <string name="card_view">Card View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>