<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_shop_24"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_bestdeals"
            android:icon="@drawable/ic_baseline_local_offer_24"
            android:title="@string/best_deals" />
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/order_history"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/your_account"/>

    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="Sign Out" />

    </group>

</menu>